Simplify and update tests